Make caret visible again to prevent delete bug in desktop

--- a/src/components/Cell/Cell.css
+++ b/src/components/Cell/Cell.css
@@ -9,7 +9,7 @@
 	padding: 5px;
 	outline: none;
 	margin: 0;
-	caret-color: transparent;
+	caret-color: var(--primary);
 	background-color: var(--background-color);
 	cursor: default;
 	opacity: 1; /* required on iOS */
